--- a/package.json
+++ b/package.json
@@ -46,5 +46,19 @@
   "devDependencies": {
     "electron": "^37.3.1",
     "electron-builder": "^26.0.12"
+  },
+  "build": {
+  "appId": "com.pomier.app",
+  "productName": "Pomier",
+  "files": [
+    "build/**/*",
+    "public/electron.js"
+  ],
+  "directories": {
+    "buildResources": "public"
+  },
+  "win": {
+    "icon": "public/icon.ico"
   }
+}
 }
